# cpp-concurrency

./: .gitignore  CMakeLists.txt  README.md  agent.md
docs/: 01-std-thread.md  02-mutex-types.md  03-lock-wrappers.md  10-thread-local-storage.md  22-exception-handling.md
examples/: CMakeLists.txt  common.h
examples/02-mutex-types/: 01-shared-mutex.cpp  02-shared-mutex-implementation.cpp
examples/07-memory-ordering/: CMakeLists.txt
examples/10-thread-local-storage/: 03-thread-local-rng.cpp  05-thread-local-db-connection.cpp  CMakeLists.txt
examples/22-exception-handling/: 01-exception-in-thread.cpp  02-exception-with-promise.cpp  04-thread-pool-exception-handling.cpp  05-exception-safe-task-runner.cpp  CMakeLists.txt
examples/atomic-operations/: 01-compare-exchange-loop.cpp  02-lock-free-counter.cpp  CMakeLists.txt
examples/atomic-ref/: 01-basic-atomic-ref.cpp  02-compare-exchange.cpp  CMakeLists.txt
examples/atomic-wait-notify/: 01-basic-wait.cpp  02-producer-consumer.cpp  CMakeLists.txt
examples/cpp20-coroutines/: 01-generator.cpp  02-async-task.cpp  03-coroutine-handle.cpp  CMakeLists.txt
examples/cpp20-sync-primitives/: 01-latch-basic.cpp  02-barrier-basic.cpp  03-semaphore-counting.cpp  04-semaphore-binary.cpp  05-semaphore-timeout.cpp  06-threadpool-semaphore.cpp  CMakeLists.txt
examples/deadlock-prevention/: 01-hierarchical-locking.cpp  CMakeLists.txt
examples/exception-handling/: 03-exception-with-async.cpp  CMakeLists.txt
examples/executor-concepts/: 01-basic-executor.cpp  02-thread-pool-executor.cpp  CMakeLists.txt
examples/futures-promises/: 01-basic-promise-future.cpp  02-async-task.cpp  03-packaged-task.cpp  04-multiple-futures.cpp  05-shared-future.cpp  06-timeout.cpp  07-parallel-mapreduce.cpp  CMakeLists.txt
examples/hardware-concurrency/: 01-hardware-concurrency.cpp  02-adaptive-thread-pool.cpp  CMakeLists.txt
examples/memory-ordering/: 01-incorrect-relaxed-usage.cpp
examples/mutex-types/: CMakeLists.txt
examples/parallel-algorithms/: 01-sort.cpp  02-for-each.cpp  03-transform.cpp  04-reduce.cpp  05-count-if.cpp  CMakeLists.txt
examples/std-jthread/: 01-basic-jthread.cpp  02-stop-token.cpp  03-thread-pool.cpp  04-producer-consumer.cpp  05-background-task.cpp  CMakeLists.txt
examples/task-based-concurrency/: 01-task-based-parallelism.cpp  02-fork-join.cpp  03-map-reduce.cpp  04-continuation-passing.cpp  CMakeLists.txt
examples/thread-local-storage/: 01-basic-thread-local.cpp  02-thread-local-class.cpp  04-thread-local-cache.cpp
examples/thread-pool/: 01-basic-threadpool.cpp  02-threadpool-with-result.cpp  CMakeLists.txt
notes/: 04-condition-variables.md  05-futures-promises.md  06-atomic-operations.md  07-memory-ordering.md  08-deadlock-detection-prevention.md  09-data-races-race-conditions.md  11-lock-free-programming.md  14-thread-pool.md  15-task-based-concurrency.md  17-std-jthread.md  19-atomic-wait-notify.md  atomic-operations.md  atomic-ref.md  atomic-wait-notify.md  condition-variables.md  cpp20-coroutines.md  cpp20-sync-primitives.md  data-races-race-conditions.md  deadlock-detection-prevention.md  executor-concepts.md  futures-promises.md  hardware-concurrency.md  lock-free-programming.md  (+6 more)
